# asteroid-sensorlogd

./: CMakeLists.txt  README.md  common.cpp  common.h  healthd.cpp  logger.cpp  logger.h  sensors.cpp  sensors.h
daemon/: CMakeLists.txt  logger.cpp  logger.h  sensorlogd.cpp
daemon/sensorPlugins/: barometerSensor.cpp  barometerSensor.h  heartrateSensor.cpp  heartrateSensor.h  stepCounter.cpp  stepCounter.h
daemon/systemd/: asteroid-sensorlogd.service
qmlplugin/: CMakeLists.txt  barometerDataLoader.cpp  barometerDataLoader.h  hrDataLoader.cpp  hrDataLoader.h  hrGraph.cpp  hrGraph.h  loggerSettings.cpp  loggerSettings.h  qmldir  sensorlogdqmlplugin.cpp  sensorlogdqmlplugin.h  stepsDataLoader.cpp  stepsDataLoader.h  weightDataLoader.cpp  weightDataLoader.h
sensorPlugins/: heartrateSensor.cpp  heartrateSensor.h  stepCounter.cpp  stepCounter.h
